--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular.min.js"></script>
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular-route.js"></script>
+    <script src="module.js"></script>
+    <script src="config.js"></script>
+    <script src="components/cityComponent.js"></script>
+    <script src="components/weatherComponent.js"></script>
+    <script src="services/ChallengeService.service.js"></script>
+    <script="services/GetApi.service.js"></script>
+    <script src="templates/cityTemplate.html"></script>
+    <script src="templates/weatherTemplate.html"></script>
 </body>
 </html>
