--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="components/cityComponent.js"></script>
     <script src="components/weatherComponent.js"></script>
     <script src="services/ChallengeService.service.js"></script>
-    <script="services/GetApi.service.js"></script>
+    <script src="services/GetApi.service.js"></script>
     <script src="templates/cityTemplate.html"></script>
     <script src="templates/weatherTemplate.html"></script>
 </body>
